--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <h1>Book Reviews</h1>
+
     <nav id="nav-bar">
         <ul>
             <li> <a href=""><i class="fa fa-home" aria-hidden="true">About us</i></a> </li>
@@ -24,13 +24,13 @@
             <li> <a href=""><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
         </ul>
     </nav>
-    <P>
+    <!-- <P>
         <br>
         <br>
         <br>
         <br>
         <br>
-    </P>
+    </P> -->
    
     <footer id="footer">
         <div class="row d-flex justify-content-center">
@@ -47,14 +47,14 @@
         <p>Copyright &copy;Book Reviews <br> 2020</p>
     </footer>
 
-    <section>
+    <!-- <section>
         <div class="container-fluid">
             <div id="book">
                 <h2>BOOKPAGE AND REVIEW</h2>
             </div>
             
         </div>
-    </section>
+    </section> -->
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/scripts.js"></script>
 
