icon space enlarged

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
         <link href="css/bootstrap.css">
-        <link href="css/styles.css" type="text/css" rel="stylesheet">
+        <link href="css/ft-index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h2> SOME OF THE BOOOKS THAT CAN BE FOUND IN OUR REVIEWS</h2>
         <div class="gallery"> 
             <div class="row1">
-            <div class="column1">
+                <div class="col-sm">
+         <!--  <div class="column1"> -->
                 <div id="work">
                     <div class="work5">
                 <div class="image1">
@@ -28,7 +29,8 @@
                 </div>
                 </div>
             </div>
-            <div class="column1"> 
+            <div class="col-sm">
+          <!--<div class="column1"> -->
                 <div id="work">
                     <div class="work6">
                 <div class="image1">
@@ -41,7 +43,8 @@
                 </div>
                 </div>
             </div>
-            <div class="column1">
+            <div class="col-sm">
+          <!--  <div class="column1"> -->
                 <div id="work">
                     <div class="work7">
                 <div class="image1">
@@ -56,7 +59,7 @@
             </div>
     </div>
     <div class="row1">
-        <div class="column1">
+        <div class="col-sm">
             <div id="work">
                 <div class="work1">
             <div class="image1">
@@ -69,7 +72,7 @@
             </div>
         </div>
     </div>
-    <div class="column1">
+    <div class="col-sm">
         <div id="work">
             <div class="work2">
         <div class="image1">
@@ -82,7 +85,7 @@
         </div>
     </div>
     </div>
-    <div class="column1">
+    <div class="col-sm">
         <div id="work">
             <div class="work3">
         <div class="image1">
@@ -97,7 +100,7 @@
     </div>
     
 </div>
-    <button type="button" class="btn btn-link">Review More Books</button>
+    <button type="button" class="btn btn-link" style="margin-left: 40%; background-color: blanchedalmond;">Review More Books</button>
     <div class="read">
             <p> From the review team <br>
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ <br>
@@ -120,6 +123,6 @@
             </span></p>
         <button onclick="myFunction()" id="myBtn" style="text-align: center;">Read more</button>
     </div>
-    <script src="js/scripts.js"></script>  
+    <script src="js/ft-index.js"></script>  
     </body>
 </html>
