--- a/books.html
+++ b/books.html
@@ -13,7 +13,13 @@
 <body>
 
   <div class=" container bg-info my-3">
-
+    <!--Intro section-->
+    <section class="intro">
+      <div class="jumbotron jumbo p-3 mb-1 text-white bg-transparent">
+        <h1 class="display-4 text-capitalize text-center">Whispering Stories</h1>
+        <p class="lead">Whispering Stories is a new startup for book lovers who would like to review some of their read books. Come and experience a taste of Whispering Stories. Click on the review buttons on some of these books and post your thoughts on what you thought of the book. More Books will be added in time with your suggestions Book Lovers.</p>
+      </div>
+    </section>
     <!--inspiration section-->
     <section class="inspiration mt-3">
       <h2 class="text-center text-capitalize">inspirational reads</h2>
@@ -387,6 +393,7 @@
 
     </section>
     <!--Review Section-->
+    <h2 class=" text-center">Our Reviews</h2>
     <div class="d-flex flex-wrap text-center revWrite">
 
       <div class="card m-1 mathenge">
@@ -394,7 +401,7 @@
           <div class="title my-1">
             Andrew Mathenge</div>
           <div class="card-title">
-            Book Title
+            Whispering Stories demo
           </div>
           <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the
             antagonist turns on his own family.</p>
