changed file names

--- a/caisey.html
+++ b/caisey.html
@@ -8,7 +8,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
         <link href="css/bootstrap.css">
-        <link href="css/ft-index.css" type="text/css" rel="stylesheet">
+        <link href="css/caisey.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h2> SOME OF THE BOOOKS THAT CAN BE FOUND IN OUR REVIEWS</h2>
@@ -123,6 +123,6 @@
             </span></p>
         <button onclick="myFunction()" id="myBtn" style="text-align: center;">Read more</button>
     </div>
-    <script src="js/ft-index.js"></script>  
+    <script src="js/caisey.js"></script>  
     </body>
 </html>
