--- a/index.html
+++ b/index.html
@@ -4,34 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
 </head>
 
 <body>
-
-
+<!--navbar-->
     <nav id="nav-bar">
         <ul>
-            <li> <a href=""><i class="fa fa-home" aria-hidden="true">About us</i></a> </li>
-            <li> <a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>Share</a> </li>
-            <li> <a href=""><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
+            <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
+            <li> <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
+            <li> <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
         </ul>
     </nav>
-    <!-- <P>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </P> -->
-   
+
+<!--Body content-->
+
+<!--Body content end-->
+
+
+<!--footer-->
     <footer id="footer">
         <div class="row d-flex justify-content-center">
             <div class="p-2"><img src="img/twitter.png" alt=""> </div>
@@ -47,16 +44,8 @@
         <p>Copyright &copy;Book Reviews <br> 2020</p>
     </footer>
 
-    <!-- <section>
-        <div class="container-fluid">
-            <div id="book">
-                <h2>BOOKPAGE AND REVIEW</h2>
-            </div>
-            
-        </div>
-    </section> -->
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/scripts.js"></script>
+
+ 
 
 </body>
 
