footer and nav on review page

--- a/books.html
+++ b/books.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Books Reviews</title>
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/books.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/books.js"></script>
 </head>
@@ -13,6 +16,14 @@
 <body>
 
   <div class=" container bg-info my-3">
+      <!--navbar-->
+  <nav id="nav-bar">
+    <ul>
+        <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
+        <li> <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
+        <li> <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
+    </ul>
+</nav>
     <!--Intro section-->
     <section class="intro">
       <div class="jumbotron jumbo p-3 mb-1 text-white bg-transparent">
@@ -411,6 +422,21 @@
 
 
     </div>
+    <!--footer-->
+    <footer id="footer">
+      <div class="row d-flex justify-content-center">
+          <div class="p-2"><img src="img/twitter.png" alt=""> </div>
+          <div class="p-2"><img src="img/dribble.png" alt=""> </div>
+          <div class="p-2"><img src="img/facebook.png" alt=""> </div>
+          <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
+          <div class="p-2"><img src="img/skype.png" alt=""> </div>
+          <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
+          <div class="p-2"><img src="img/behance.png" alt=""> </div>
+          <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
+          <div class="p-2"><img src="img/flickr.png" alt=""></div>
+      </div>
+      <p>Copyright &copy;Whispering Stories <br> 2020</p>
+  </footer>
 
   </div>
 
