--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
 <!--navbar-->
-    <nav id="nav-bar">
-        <ul>
-            <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
-            <li> <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
-            <li> <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
-        </ul>
-    </nav>
+<nav id="nav-bar">
+    <ul>
+        <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
+        <li> <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
+        <li> <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
+    </ul>
+</nav>
 
 <!--Body content-->
 
@@ -29,20 +29,20 @@
 
 
 <!--footer-->
-    <footer id="footer">
-        <div class="row d-flex justify-content-center">
-            <div class="p-2"><img src="img/twitter.png" alt=""> </div>
-            <div class="p-2"><img src="img/dribble.png" alt=""> </div>
-            <div class="p-2"><img src="img/facebook.png" alt=""> </div>
-            <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
-            <div class="p-2"><img src="img/skype.png" alt=""> </div>
-            <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
-            <div class="p-2"><img src="img/behance.png" alt=""> </div>
-            <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
-            <div class="p-2"><img src="img/flickr.png" alt=""></div>
-        </div>
-        <p>Copyright &copy;Book Reviews <br> 2020</p>
-    </footer>
+<footer id="footer">
+    <div class="row d-flex justify-content-center">
+        <div class="p-2"><img src="img/twitter.png" alt=""> </div>
+        <div class="p-2"><img src="img/dribble.png" alt=""> </div>
+        <div class="p-2"><img src="img/facebook.png" alt=""> </div>
+        <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
+        <div class="p-2"><img src="img/skype.png" alt=""> </div>
+        <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
+        <div class="p-2"><img src="img/behance.png" alt=""> </div>
+        <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
+        <div class="p-2"><img src="img/flickr.png" alt=""></div>
+    </div>
+    <p>Copyright &copy;Whispering Stories<br> 2020</p>
+</footer>
 
 
  
