--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 <!--navbar-->
-<nav id="nav-bar">
+<nav class=" text-right" id="nav-bar">
     <ul>
         <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
         <li> <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
