--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/caisey.css">
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/caisey.js"></script>
 </head>
 
 <body>
@@ -24,7 +26,138 @@
 </nav>
 
 <!--Body content-->
+<h2 class=" text-center"> SOME OF THE BOOOKS THAT CAN BE FOUND IN OUR REVIEWS</h2>
+<div class="container">
+    <div class="row1">
+        <div class="col-sm">
+            <!--  <div class="column1"> -->
+            <div id="work">
+                <div class="work5">
+                    <div class="image1">
+                        <img src="img/me.jpg" width="90%" class="image">
+                        <div class="overlay">
+                            <div class="text">
+                                ME BEFORE YOU
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <!--<div class="column1"> -->
+            <div id="work">
+                <div class="work6">
+                    <div class="image1">
+                        <img src="img/our.jpg" width="90%" class="image">
+                        <div class="overlay">
+                            <div class="text">
+                                THE FAULT IN OUR STARS </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <!--  <div class="column1"> -->
+            <div id="work">
+                <div class="work7">
+                    <div class="image1">
+                        <img src="img/girl.jpg" width="95%" class="image">
+                        <div class="overlay">
+                            <div class="text">
+                                GONE GIRL </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row1">
+        <div class="col-sm">
+            <div id="work">
+                <div class="work1">
+                    <div class="image1">
+                        <img src="img/man.jpg" width="90%" class="image">
+                        <div class="overlay">
+                            <div class="text">
+                                MEMORY MAN </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div id="work">
+                <div class="work2">
+                    <div class="image1">
+                        <img src="img/far.jpg" width="90%" class="image">
+                        <div class="overlay">
+                            <div class="text">
+                                FAR FROM THE MADDING CROWD </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm">
+            <div id="work">
+                <div class="work3">
+                    <div class="image1">
+                        <img src="img/town.jpg" width="90%" class="image">
+                        <div class="overlay">
+                            <div class="text">
+                                PAPER TOWN </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </div>
+</div>
+<a href="books.html"><button type="button" class="btn btn-link" style="margin-left: 42%; background-color: blanchedalmond;">Go to Review</button></a>
+<div class="read container my-3">
+    <p class=" text-center"> From the review team <br>
+        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ <br>
+        Books are the most underated practices in our generation today. With modern technology and everything
+        centered at the tips of our fingertips <br>
+        we have lost touch with all the finner things in life, making our lives tremendously blunt. We have lost
+        many connections to the outer world and even within <br>
+        ourselves, luckily this organisation we offer you <span id="dots">...</span> <span id="more">a chance to
+            rebuild, strengthen, or even start a relationship with books. We review books to give the public an
+            honest <br>
+            review for books that we recommend and believe to be an A-list for those searching for a good
+            relationship starter with books. <br>
+            Many people overlook the importance of a book review which brings forth a big question, <i> What
+                makes a good book? Is it the writer? Or is it the clout it gets off a movie? No no and no</i>
+            <br>
+            We believe what makes a good book is simply the <em> REVIEW</em> yes the review, the very short
+            paragraph you read that summarizes the summary could be a game changer <br>
+            In the book industry. Books do not need a life like the video games you play or the movies you
+            watch, instead they bring life to an imaginative mind and opens a channel of deeper understanding
+            within. <br>
+            We highly hope that our reviews meets you well and with the message that you are looking for, we
+            hope to bring out a message of hope and tranquility, a message of peace and prosperity. We really
+            hope you start to view <br>
+            books just as we do, not just as stack of printed pages but a containment of an empty void where one
+            could go to get away of our coonstantly changing world. Where one could take a step back and look at
+            life with a different perspective <br>
+            Once a book makes you feel the rest falls in place. A book is not just a feeling but an existance.
+            <i>To love a book you must live the book and to live the book you must know the book </i> What this
+            generally means is that just like life we <br>
+            live to know whether we love it or not and to know that we take time to know life. Living the book
+            means allowing your mind to sink into existence, becoming one with the book. <br>
+            ----------------------------------------------------------------------------------------------------------------------------------------------------------
+            <br>
+            To stop myself from writing any further I leave you with a good note from my team. <br>
+            I surely hope this website helps you search for what you are looking for in books. <br>
+            At last I urge you to leave a comment after viewing our reviews. Write to us and give us your
+            suggestions, with that being said I thank you for your time to read all this
+            ~Team
+        </span></p>
+    <button onclick="myFunction()" id="myBtn" style="text-align: center;">Read more</button>
+</div>
 <!--Body content end-->
 
 
