--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </nav>
 
 <!--Body content-->
-<h2 class=" text-center"> SOME OF THE BOOOKS THAT CAN BE FOUND IN OUR REVIEWS</h2>
+<h2 class=" text-center">SOME OF THE BOOOKS THAT CAN BE FOUND IN OUR REVIEWS</h2>
 <div class="container">
     <div class="row1">
         <div class="col-sm">
@@ -116,10 +116,13 @@
 
     </div>
 </div>
-<a href="books.html"><button type="button" class="btn btn-link" style="margin-left: 42%; background-color: blanchedalmond;">Go to Review</button></a>
+<div class=" d-flex justify-content-center">
+    <a href="books.html"><button type="button" class="btn btn-link" style="background-color: blanchedalmond;">Go to Review</button></a>
+</div>
+
 <div class="read container my-3">
-    <p class=" text-center"> From the review team <br>
-        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ <br>
+    <p class=" text-center"> From the review team 
+        <hr>
         Books are the most underated practices in our generation today. With modern technology and everything
         centered at the tips of our fingertips <br>
         we have lost touch with all the finner things in life, making our lives tremendously blunt. We have lost
@@ -147,9 +150,8 @@
             <i>To love a book you must live the book and to live the book you must know the book </i> What this
             generally means is that just like life we <br>
             live to know whether we love it or not and to know that we take time to know life. Living the book
-            means allowing your mind to sink into existence, becoming one with the book. <br>
-            ----------------------------------------------------------------------------------------------------------------------------------------------------------
-            <br>
+            means allowing your mind to sink into existence, becoming one with the book. 
+            <hr>
             To stop myself from writing any further I leave you with a good note from my team. <br>
             I surely hope this website helps you search for what you are looking for in books. <br>
             At last I urge you to leave a comment after viewing our reviews. Write to us and give us your
