--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Whispering Stories</title>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -116,7 +116,7 @@
 
     </div>
 </div>
-<div class=" d-flex justify-content-center">
+<div class="d-flex justify-content-center">
     <a href="books.html"><button type="button" class="btn btn-link" style="background-color: blanchedalmond;">Go to Review</button></a>
 </div>
 
@@ -158,7 +158,10 @@
             suggestions, with that being said I thank you for your time to read all this
             ~Team
         </span></p>
-    <button onclick="myFunction()" id="myBtn" style="text-align: center;">Read more</button>
+    <div class="d-flex justify-content-center">
+        <button onclick="myFunction()" id="myBtn" style="text-align: center;">Read more</button>
+    </div>
+    
 </div>
 <!--Body content end-->
 
