--- a/index.html
+++ b/index.html
@@ -2,62 +2,251 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Whispering Stories</title>
+  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Font+Name">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Font+Name">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/caisey.css">
+  <link rel="stylesheet" href="css/juliet.css" type="text/css"> 
+
 </head>
 
 <body>
+  <!--navbar-->
+  <nav class=" text-right" id="nav-bar">
+    <ul>
+      <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
+      <li> <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
+      <li> <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
+    </ul>
+  </nav>
 
-    <h1>Book Reviews</h1>
-    <nav id="nav-bar">
-        <ul>
-            <li> <a href=""><i class="fa fa-home" aria-hidden="true">About us</i></a> </li>
-            <li> <a href=""><i class="fa fa-share-alt" aria-hidden="true"></i>Share</a> </li>
-            <li> <a href=""><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
-        </ul>
-    </nav>
-    <P>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </P>
-   
-    <footer id="footer">
-        <div class="row d-flex justify-content-center">
-            <div class="p-2"><img src="img/twitter.png" alt=""> </div>
-            <div class="p-2"><img src="img/dribble.png" alt=""> </div>
-            <div class="p-2"><img src="img/facebook.png" alt=""> </div>
-            <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
-            <div class="p-2"><img src="img/skype.png" alt=""> </div>
-            <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
-            <div class="p-2"><img src="img/behance.png" alt=""> </div>
-            <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
-            <div class="p-2"><img src="img/flickr.png" alt=""></div>
+  <!--Body content-->
+  <div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img class="carousel-img" src="img/slide4.webp" alt="Los Angeles" style="width:100%;">
         </div>
-        <p>Copyright &copy;Book Reviews <br> 2020</p>
-    </footer>
 
-    <section>
-        <div class="container-fluid">
-            <div id="book">
-                <h2>BOOKPAGE AND REVIEW</h2>
+        <div class="item">
+          <img class="carousel-img" src="img/books-library.jpg" alt="Chicago" style="width:100%;">
+        </div>
+
+        <div class="item">
+          <img class="carousel-img" src="img/slide7.jpg" alt="New york" style="width:100%;">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <!-- about section -->
+  <div class="about container">
+    <h1>About Us</h1>
+    <p>Nobody likes to spend money on a new book only to face that overwhelming feeling of
+      disappointment when it doesn’t live up to your expectations. The solution is to check
+      out a few book review sites before you hit the shops. The greater the diversity of opinions
+      you can gather, the more confidence you can have that you’ll enjoy the title.</p>
+    <p><strong>Whispering Stories</strong> is arguably the leading online community for book lovers. If you want
+      some inspiration for which book to read next, this is the site to visit.
+      There’s an endless number of user-generated reading lists to explore, and <strong>Whispering
+        Stories</strong>
+      itself publishes dozens of “best of” lists across a number of categories. You can also
+      join book discussions and reading groups with thousands of members.</p>
+    <p> You can participate in the community by adding your own rankings to books you’ve
+      read and leaving reviews for other people to check out. Occasionally, there are even
+      bonus events like question and answer session with authors.</p>
+  </div>
+
+  <h2 class=" text-center">SOME OF THE BOOOKS THAT CAN BE FOUND IN OUR REVIEWS</h2>
+  <div class="container">
+    <div class="row1">
+      <div class="col-sm">
+        <!--  <div class="column1"> -->
+        <div id="work">
+          <div class="work5">
+            <div class="image1">
+              <img src="img/me.jpg" width="90%" class="image">
+              <div class="overlay">
+                <div class="text">
+                  ME BEFORE YOU
+                </div>
+              </div>
             </div>
-            
+          </div>
         </div>
-    </section>
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/scripts.js"></script>
+      </div>
+      <div class="col-sm">
+        <!--<div class="column1"> -->
+        <div id="work">
+          <div class="work6">
+            <div class="image1">
+              <img src="img/our.jpg" width="90%" class="image">
+              <div class="overlay">
+                <div class="text">
+                  THE FAULT IN OUR STARS </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <!--  <div class="column1"> -->
+        <div id="work">
+          <div class="work7">
+            <div class="image1">
+              <img src="img/girl.jpg" width="95%" class="image">
+              <div class="overlay">
+                <div class="text">
+                  GONE GIRL </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row1">
+      <div class="col-sm">
+        <div id="work">
+          <div class="work1">
+            <div class="image1">
+              <img src="img/man.jpg" width="90%" class="image">
+              <div class="overlay">
+                <div class="text">
+                  MEMORY MAN </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div id="work">
+          <div class="work2">
+            <div class="image1">
+              <img src="img/far.jpg" width="90%" class="image">
+              <div class="overlay">
+                <div class="text">
+                  FAR FROM THE MADDING CROWD </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div id="work">
+          <div class="work3">
+            <div class="image1">
+              <img src="img/town.jpg" width="90%" class="image">
+              <div class="overlay">
+                <div class="text">
+                  PAPER TOWN </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
+    <a href="books.html"><button type="button" class="btn btn-link" style="background-color: blanchedalmond;">Go to
+        Review</button></a>
+  </div>
+
+  <div class="read container my-3">
+    <p class=" text-center"> From the review team
+      <hr>
+      Books are the most underated practices in our generation today. With modern technology and everything
+      centered at the tips of our fingertips <br>
+      we have lost touch with all the finner things in life, making our lives tremendously blunt. We have lost
+      many connections to the outer world and even within <br>
+      ourselves, luckily this organisation we offer you <span id="dots">...</span> <span id="more">a chance to
+        rebuild, strengthen, or even start a relationship with books. We review books to give the public an
+        honest <br>
+        review for books that we recommend and believe to be an A-list for those searching for a good
+        relationship starter with books. <br>
+        Many people overlook the importance of a book review which brings forth a big question, <i> What
+          makes a good book? Is it the writer? Or is it the clout it gets off a movie? No no and no</i>
+        <br>
+        We believe what makes a good book is simply the <em> REVIEW</em> yes the review, the very short
+        paragraph you read that summarizes the summary could be a game changer <br>
+        In the book industry. Books do not need a life like the video games you play or the movies you
+        watch, instead they bring life to an imaginative mind and opens a channel of deeper understanding
+        within. <br>
+        We highly hope that our reviews meets you well and with the message that you are looking for, we
+        hope to bring out a message of hope and tranquility, a message of peace and prosperity. We really
+        hope you start to view <br>
+        books just as we do, not just as stack of printed pages but a containment of an empty void where one
+        could go to get away of our coonstantly changing world. Where one could take a step back and look at
+        life with a different perspective <br>
+        Once a book makes you feel the rest falls in place. A book is not just a feeling but an existance.
+        <i>To love a book you must live the book and to live the book you must know the book </i> What this
+        generally means is that just like life we <br>
+        live to know whether we love it or not and to know that we take time to know life. Living the book
+        means allowing your mind to sink into existence, becoming one with the book.
+        <hr>
+        To stop myself from writing any further I leave you with a good note from my team. <br>
+        I surely hope this website helps you search for what you are looking for in books. <br>
+        At last I urge you to leave a comment after viewing our reviews. Write to us and give us your
+        suggestions, with that being said I thank you for your time to read all this
+        ~Team
+      </span></p>
+    <div class="d-flex justify-content-center">
+      <button onclick="myFunction()" id="myBtn" style="text-align: center;">Read more</button>
+    </div>
+
+  </div>
+  <!--Body content end-->
+
+
+  <!--footer-->
+  <footer id="footer">
+    <div class="row d-flex justify-content-center">
+      <div class="p-2"><img src="img/twitter.png" alt=""> </div>
+      <div class="p-2"><img src="img/dribble.png" alt=""> </div>
+      <div class="p-2"><img src="img/facebook.png" alt=""> </div>
+      <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
+      <div class="p-2"><img src="img/skype.png" alt=""> </div>
+      <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
+      <div class="p-2"><img src="img/behance.png" alt=""> </div>
+      <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
+      <div class="p-2"><img src="img/flickr.png" alt=""></div>
+    </div>
+    <p>Copyright &copy;Whispering Stories<br> 2020</p>
+  </footer>
+
+
+  <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="js/jquery-3.5.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <script src="js/caisey.js"></script>
 </body>
 
 </html>
