--- a/juliet.html
+++ b/juliet.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/juliet.css" type="text/css">
   <title>Open Library</title>
 </head>
 
@@ -25,15 +25,15 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="img/slide4.webp" alt="Los Angeles" style="width:100%;">
+          <img class="carousel-img" src="img/slide4.webp" alt="Los Angeles" style="width:100%;">
         </div>
 
         <div class="item">
-          <img src="img/books-library.jpg" alt="Chicago" style="width:100%;">
+          <img class="carousel-img" src="img/books-library.jpg" alt="Chicago" style="width:100%;">
         </div>
 
         <div class="item">
-          <img src="img/slide7.jpg" alt="New york" style="width:100%;">
+          <img class="carousel-img" src="img/slide7.jpg" alt="New york" style="width:100%;">
         </div>
       </div>
 
