--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <div class=" container bg-info my-3">
   <!--navbar-->
   <nav class=" text-right" id="nav-bar">
     <ul>
@@ -26,7 +27,7 @@
   <!--Body content-->
 
   <!-- about section -->
-  <div class="about container">
+  <div class="about">
     <h1>About Us</h1>
     <p>Nobody likes to spend money on a new book only to face that overwhelming feeling of
       disappointment when it doesn’t live up to your expectations. The solution is to check
@@ -138,7 +139,7 @@
         Review</button></a>
   </div>
 
-  <div class="read container my-3">
+  <div class="read m-3">
     <p class=" text-center"> From the review team
       <hr>
       Books are the most underated practices in our generation today. With modern technology and everything
@@ -199,6 +200,8 @@
     </div>
     <p>Copyright &copy;Whispering Stories<br> 2020</p>
   </footer>
+
+  </div>
 
 
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
