--- a/books.html
+++ b/books.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Whispering Stories</title>
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/books.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -16,19 +17,20 @@
 <body>
 
   <div class=" container bg-info my-3">
-      <!--navbar-->
-  <nav class=" text-right" id="nav-bar">
-    <ul>
-        <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
-        <li> <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
-        <li> <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
-    </ul>
-</nav>
+    <!--navbar-->
+    <nav id="nav-bar">
+      <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
+      <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
+      <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
+    </nav>
     <!--Intro section-->
     <section class="intro">
       <div class="jumbotron jumbo p-3 mb-1 text-white bg-transparent">
         <h1 class="display-4 text-capitalize text-center">Whispering Stories</h1>
-        <p class="lead">Whispering Stories is a new startup for book lovers who would like to review some of their read books. Come and experience a taste of Whispering Stories. Click on the review buttons on some of these books and post your thoughts on what you thought of the book. More Books will be added in time with your suggestions Book Lovers.</p>
+        <p class="lead">Whispering Stories is a new startup for book lovers who would like to review some of their read
+          books. Come and experience a taste of Whispering Stories. Click on the review buttons on some of these books
+          and post your thoughts on what you thought of the book. More Books will be added in time with your suggestions
+          Book Lovers.</p>
       </div>
     </section>
     <!--inspiration section-->
@@ -197,8 +199,8 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/young-adult/tweet-cute.jpg" class="card-img-top" alt="Tweet Cute"
-            data-toggle="tooltip" data-placement="top"
+          <img src="img/young-adult/tweet-cute.jpg" class="card-img-top" alt="Tweet Cute" data-toggle="tooltip"
+            data-placement="top"
             title="A witty rom-com reinvention ... with deeply relatable insights on family pressure and growing up.” - Emily Wibberley and Austin Siegemund-Broka, authors of Always Never Yours and If I’m Being Honest “An adorable debut that updates a classic romantic trope with a buzzy twist.">
           <div class="card-body">
             <h5 class="card-title tweetTitle">Tweet Cute</h5>
@@ -321,8 +323,8 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/horror/the-shining-king.jpg" class="card-img-top" alt="The Shining"
-            data-toggle="tooltip" data-placement="top"
+          <img src="img/horror/the-shining-king.jpg" class="card-img-top" alt="The Shining" data-toggle="tooltip"
+            data-placement="top"
             title="The Shining is a horror novel by American author Stephen King. Published in 1977, it is King's third published novel and first hardback bestseller: the success of the book firmly established King as a preeminent author in the horror genre.">
           <div class="card-body">
             <h5 class="card-title shiningTitle">The Shining</h5>
@@ -425,18 +427,18 @@
     <!--footer-->
     <footer id="footer">
       <div class="row d-flex justify-content-center">
-          <div class="p-2"><img src="img/twitter.png" alt=""> </div>
-          <div class="p-2"><img src="img/dribble.png" alt=""> </div>
-          <div class="p-2"><img src="img/facebook.png" alt=""> </div>
-          <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
-          <div class="p-2"><img src="img/skype.png" alt=""> </div>
-          <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
-          <div class="p-2"><img src="img/behance.png" alt=""> </div>
-          <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
-          <div class="p-2"><img src="img/flickr.png" alt=""></div>
+        <div class="p-2"><img src="img/twitter.png" alt=""> </div>
+        <div class="p-2"><img src="img/dribble.png" alt=""> </div>
+        <div class="p-2"><img src="img/facebook.png" alt=""> </div>
+        <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
+        <div class="p-2"><img src="img/skype.png" alt=""> </div>
+        <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
+        <div class="p-2"><img src="img/behance.png" alt=""> </div>
+        <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
+        <div class="p-2"><img src="img/flickr.png" alt=""></div>
       </div>
       <p>Copyright &copy;Whispering Stories <br> 2020</p>
-  </footer>
+    </footer>
 
   </div>
 
