--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <script src="js/jquery-3.5.1.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="js/caisey.js"></script>
-  <link rel="stylesheet" href="css/juliet.css" type="text/css">
   <title>Whispering Stories</title>
+  <link rel="stylesheet" href="css/juliet.css" type="text/css">
   <link rel="stylesheet" href="css/caisey.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
