--- a/books.html
+++ b/books.html
@@ -12,6 +12,8 @@
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/books.js"></script>
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 
 <body>
