--- a/books.html
+++ b/books.html
@@ -6,12 +6,16 @@
   <title>Whispering Stories</title>
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!--mailChimp-->
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+  <!--mailChimp-->
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/books.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/books.js"></script>
+  <script src="js/scripts.js"></script>
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <link rel="icon" href="favicon.png" type="image/png">
 </head>
@@ -21,9 +25,9 @@
   <div class=" container bg-info my-3">
     <!--navbar-->
     <nav id="nav-bar">
-      <a href="index.html"><i class="fa fa-home" aria-hidden="true">Home</i></a> </li>
-      <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a> </li>
-      <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a> </li>
+      <a href="index.html"><i class="fa fa-home" aria-hidden="true" id="homey">Home</i></a>
+      <a href="books.html"><i class="fa fa-share-alt" aria-hidden="true"></i>Review</a>
+      <a href="#footer"><i class="fa fa-phone" aria-hidden="true"></i>Contacts</a>
     </nav>
     <!--Intro section-->
     <section class="intro">
@@ -428,18 +432,48 @@
     </div>
     <!--footer-->
     <footer id="footer">
-      <div class="row d-flex justify-content-center">
-        <div class="p-2"><img src="img/twitter.png" alt=""> </div>
-        <div class="p-2"><img src="img/dribble.png" alt=""> </div>
-        <div class="p-2"><img src="img/facebook.png" alt=""> </div>
-        <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
-        <div class="p-2"><img src="img/skype.png" alt=""> </div>
-        <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
-        <div class="p-2"><img src="img/behance.png" alt=""> </div>
-        <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
-        <div class="p-2"><img src="img/flickr.png" alt=""></div>
+      <form action="https://gmail.us17.list-manage.com/subscribe/post?u=32a89ffbf4997fa75416ed2c2&amp;id=e590fa9987"
+        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="flexy validate"
+        target="_blank" novalidate>
+        <div class=" inputs">
+          <div class="enters">
+            <input type="text" class="form-control bg-transparent" id="MERGE1" name="MERGE1"
+              placeholder=" Enter your Name..." required>
+          </div>
+          <div class="enters">
+            <input type="email" class="form-control bg-transparent" name="MERGE0" id="MERGE0"
+              placeholder="Enter your Email.." required>
+          </div>
+          <div class="enters">
+            <textarea class="form-control bg-transparent" name="MERGE2" id="MERGE2"
+              placeholder="Type to us Your message here.." rows="4" required></textarea>
+            <input type="submit" id="mailChimpSubmit" class=" btn-primary btn-lg my-2" value="Send">
+          </div>
+        </div>
+      </form>
+      <div class="flexy">
+        <div>
+          <h2>Contact Us Here Anytime</h2>
+        </div>
+        <div class="links">
+          <div class="p-2"><img src="img/twitter.png" alt=""> </div>
+          <div class="p-2"><img src="img/dribble.png" alt=""> </div>
+          <div class="p-2"><img src="img/facebook.png" alt=""> </div>
+          <div class="p-2"><img src="img/g_plus.png" alt=""> </div>
+          <div class="p-2"><img src="img/skype.png" alt=""> </div>
+          <div class="p-2"><img src="img/stumble_upon.png" alt=""> </div>
+          <div class="p-2"><img src="img/behance.png" alt=""> </div>
+          <div class="p-2"><img src="img/pinterest.png" alt=""> </div>
+          <div class="p-2"><img src="img/flickr.png" alt=""></div>
+        </div>
+        <div>
+          <p>Copyright &copy;Whispering Stories<br> 2020</p>
+        </div>
+        <div>
+          <a href="#homey">Back to Top</a>
+        </div>
       </div>
-      <p>Copyright &copy;Whispering Stories <br> 2020</p>
+
     </footer>
 
   </div>
